# teco-ultralytics

.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yaml  greetings.yml
docker/: Dockerfile  Dockerfile-conda  Dockerfile-jetson-jetpack4  Dockerfile-runner
docs/en/: quickstart.md
docs/en/guides/: conda-quickstart.md  model-deployment-options.md  nvidia-jetson.md  object-blurring.md  object-cropping.md  sahi-tiled-inference.md  security-alarm-system.md  steps-of-a-cv-project.md  workouts-monitoring.md  yolo-common-issues.md
docs/en/help/: FAQ.md
docs/en/integrations/: onnx.md  tensorrt.md
docs/en/models/: rtdetr.md
docs/en/modes/: benchmark.md  predict.md  train.md  val.md
docs/en/usage/: cfg.md  python.md  (+1 more)
examples/: heatmaps.ipynb  hub.ipynb  object_counting.ipynb  object_tracking.ipynb  tutorial.ipynb
examples/YOLOv8-CPP-Inference/: CMakeLists.txt  README.md  inference.cpp  inference.h
examples/YOLOv8-LibTorch-CPP-Inference/: main.cc
examples/YOLOv8-ONNXRuntime/: main.py
examples/YOLOv8-ONNXRuntime-CPP/: CMakeLists.txt  README.md  inference.cpp  inference.h  main.cpp
examples/YOLOv8-ONNXRuntime-Rust/: README.md
examples/YOLOv8-Region-Counter/: yolov8_region_counter.py
examples/YOLOv8-Segmentation-ONNXRuntime-Python/: main.py
tests/: __init__.py  test_cli.py  test_sdaa.py
ultralytics/data/: build.py
ultralytics/engine/: exporter.py  model.py  results.py  trainer.py
ultralytics/nn/: autobackend.py
ultralytics/utils/: autobatch.py  benchmarks.py  checks.py  loss.py  ops.py  plotting.py  torch_utils.py
(+19 files in other folders)
